@@ -180,6 +180,8 @@ bool CALLBACK_HID_Device_CreateHIDReport(USB_ClassInfo_HID_Device_t* const HIDIn
 		if (!(ButtonStatus_LCL & BUTTONS_BUTTON1))
 		  return 0;
 		
+		KeyboardReport->Modifier = HID_KEYBOARD_MODIFER_LEFTSHIFT;
+
 		if (JoyStatus_LCL & JOY_UP)
 		  KeyboardReport->KeyCode[0] = 0x04; // A
 		else if (JoyStatus_LCL & JOY_DOWN)
